--- a/assets/style/varaibles.css
+++ b/assets/style/varaibles.css
@@ -1,5 +1,6 @@
 @import url("/assets/style/header.css");
 @import url("/assets/style/main.css");
+@import url("/assets/style/extra.css");
 
 :root {
 
