--- a/assets/style/extra.css
+++ b/assets/style/extra.css
@@ -1,6 +1,14 @@
 @import url("/assets/style/varaibles.css");
 
-containner-2 {
+
+
+.div__containner {
+    text-align: center;
     border-radius: 10px;
-background: linear-gradient(0deg, rgba(0, 0, 0, 0.71) 0%, rgba(0, 0, 0, 0.71) 100%), url("/assets/img/bg-food.png"), lightgray 50% / cover no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.71) 0%, rgba(0, 0, 0, 0.71) 100%), url("/assets/img/bg-food.png"), lightgray 50% / cover no-repeat;
+   
+}
+
+.text {
+    color: white;
 }
