--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -35,6 +35,14 @@ font-weight: 600;
 line-height: normal;
 }
 
+.cards {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
 .div__card {
     display: flex;
     align-items: center;
