--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -53,3 +53,16 @@ a {
     
 }
 
+@media (min-width: 1440px) {
+
+    .sec-header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+  
+
+}
+
+
