--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,7 @@
 @import url("/assets/style/varaibles.css");
 
 main {
+    margin-top: 1em;
     text-align: center;
 }
 
@@ -65,6 +66,20 @@ border-radius: 10px;
 
 #bnt {
     margin-top: 1em;
+}
+
+
+@media (min-width: 1440px) {   
+
+    .cont-div {
+        display: flex;
+        justify-content: space-around;
+    }
+
+ 
+
+
+
 }
 
 
