--- a/assets/style/varaibles.css
+++ b/assets/style/varaibles.css
@@ -1,6 +1,8 @@
 @import url("/assets/style/header.css");
 @import url("/assets/style/main.css");
 @import url("/assets/style/extra.css");
+@import url("/assets/style/cards.css");
+@import url("/assets/style/clients.css");
 @import url("/assets/style/footer.css");
 
 :root {
