--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -60,9 +60,11 @@ a {
 
 @media (min-width: 1440px) {
 
+    
+
     .sec-header {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     .plates {
         display: block;
