--- a/assets/style/cards.css
+++ b/assets/style/cards.css
@@ -8,6 +8,12 @@
     gap: 1em;
 }
 
+.client-card {
+    border-radius: 10px;
+    background: #F1F1F1; 
+   
+}
+
 
 .containner-cards-link {
   gap: 1em;
@@ -38,6 +44,10 @@
     margin-top: 1em;
 }
 
+  .grid-container {
+    display: none;
+}
+
 @media (min-width: 1440px) {  
     
     .containner-cards {
@@ -64,6 +74,29 @@
         display: inline-block;
     }
 
-
+    .grid-container {
+        display: block;
+        display: grid;
+        grid-template-rows: auto 1fr; 
+        grid-gap: 10px;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      
+      .image-top,
+      .image-bottom {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      
+      .image-top img,
+      .image-bottom img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+      
 
 }
+
+
