--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -5,54 +5,6 @@ header {
     
 }
 
-li {
-    list-style: none;
-    padding: .3rem 1rem;
-  }
-  
- 
-  
-  li:hover a{
-    text-decoration: underline;
-  }
-
-/*.menu__button {
-    padding: 5px;
-    background: transparent;
-    border: solid 3px black;
-    border-radius: .5rem;
-    font-weight: bold;
-    width: 4rem;
-    cursor: pointer;
-}
-
-.menu__button:hover  {
-    background: #000D;
-    color: white;
-
-}
-
-.lista-nav {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: stretch;
-    gap: 1rem;
-    border: solid 2px black;
-    border-radius: 5px;
-}
-
-li {
-    list-style: none;
-    padding: .3rem 1rem;
-  }
-  
-  li:hover {
-    background: #0003;
-  }
-  
-  li:hover a{
-    text-decoration: underline;
-  } */
 
   
 
@@ -118,14 +70,35 @@ a {
     display: none;
 }
 
+#menu {
+    display: block;
+}
+
  .div-nav-link {
     display: none;
 }
 
 
+.nav-active {
+    display: block;
+  }
+
+
+  #menu__button {
+    display: block;
+}
+
+ 
+
 
 
 @media (min-width: 1440px) {
+
+    #menu__button {
+        display: none;
+    }
+    
+     
 
     .div-nav-link {
         display: block;
