--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 @import url("/assets/style/header.css");
 @import url("/assets/styles/forms.css");
 @import url("/assets/styles/cadastro.css");
+@import url("/assets/styles/finalizadoCad.css");
 @import url("/assets/style/footer.css");
 
 
